welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:13: error: too many arguments for method droite: ()Unit
		droite(2);
                      ^