welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {
	var i = 0;
	for (i <- 1 to 4) {
		baisseBrosse; 
		avance();
		leveBrosse;
		avance();
		gauche();
		baisseBrosse;
		avance();
		leveBrosse;
		droite(2);
		avance();
		gauche();
		baisseBrosse;
		avance();
		leveBrosse;
		avance();
		}	
}
